language-selector (0.77) UNRELEASED; urgency=low

  * dbus_backend/ls-dbus-backend: Set LC_IDENTIFICATION as well, to comply
    with what Ubiquity does. (LP: #926207)
  * tests/test_language_support_pkgs.py: Fix
    test_by_package_and_locale_noinstalled() for current pkg_depends: gedit
    does not need aspell any more, use abiword as trigger package.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 27 Mar 2012 08:02:00 +0200

language-selector (0.76) precise; urgency=low

  * Add conffile upgrade handling for ko-kr conffiles dropped since lucid.

 -- Steve Langasek <steve.langasek@ubuntu.com>  Mon, 26 Mar 2012 22:20:17 -0700

language-selector (0.75) precise; urgency=low

  [ Jinkyu Yi ]
  * data/pkg_depends:
    - Add fonts-unfonts-core for fonts-nanum's fallback
    - Remove ttf-alee, fonts-nanum-extra to reduce ko-related packages
      (refer to task-korean-desktop at Debian)
    - remove nabi, Unity can't support it

 -- Martin Pitt <martin.pitt@ubuntu.com>  Fri, 16 Mar 2012 11:27:49 +0100

language-selector (0.74) precise; urgency=low

  * data/pkg_depends: Add fonts-ukij-uyghur for Uyghur. Thanks to Eagle
    Burkut for pointing this out.

 -- Martin Pitt <martin.pitt@ubuntu.com>  Thu, 15 Mar 2012 15:22:54 +0100

language-selector (0.73) precise; urgency=low

  * data/pkg_depends: Add support for translated documentation of amarok
    and calligra.

 -- Felix Geyer <debfx@ubuntu.com>  Mon, 12 Mar 2012 11:39:45 -0400

language-selector (0.72) precise; urgency=low

  [ Sebastien Bacher ]
  * data/language-selector.desktop.in:
    - use official "Keywords" rather than "X-GNOME-Keywords" (LP: #949849)

  [ Martin Pitt ]
  * LanguageSelector/qt/QtLanguageSelector.py: Kubuntu's package manager is
    "Muon", not "Adept". Also update all messages in po/*.po to avoid breaking
    existing translations. (LP: #628653)
  * LanguageSelector/gtk/GtkLanguageSelector.py: Fix crash in
    updateLocaleChooserCombo() if tree model is not yet set. (LP: #945494)