@@ -5,6 +5,10 @@ language-selector (0.77) UNRELEASED; urgency=low
   * tests/test_language_support_pkgs.py: Fix
     test_by_package_and_locale_noinstalled() for current pkg_depends: gedit
     does not need aspell any more, use abiword as trigger package.
+  * language_support_pkgs.py, _expand_pkg_pattern(): Special-case "zh-han[st]"
+    values for the locale. These are not actual locales, but e. g. Ubiquity
+    assumes this works. So let these mean "zh_CN" and "zh_TW" respectively.
+    Add a test case to tests/test_language_support_pkgs.py. (LP: #963460)
 
  -- Martin Pitt <martin.pitt@ubuntu.com>  Tue, 27 Mar 2012 08:02:00 +0200
 
